# CLAUDE-GUI

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierrc  CLAUDE-EN.md  CLAUDE.md  Dockerfile  LICENSE  README-EN.md  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  playwright.config.ts  playwright.isolated.config.ts  playwright.mock-claude.config.ts  server.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  install-script.yml  release.yml
docs/architecture/: 01-system-overview.md  02-component-design.md  03-data-flow.md  04-api-design.md  05-security-architecture.md  06-deployment.md  README.md  terminal-v2-design.md
docs/qa/: terminal-smoke.md
docs/research/: Claude CLI GUI 개발 계획서.md  Claude GUI_ Development Plan for a Web-Based IDE Wrapping Claude CLI.md  이 보고서는 Anthropic Claude CLI를 기반으로 한 웹 기반 AI 에디터 시스템.md
docs/srs/: 01-introduction.md  02-overall-description.md  03-functional-requirements.md  04-non-functional-requirements.md  05-use-cases.md  06-external-interfaces.md  07-constraints-and-assumptions.md  README.md
installer/tauri/: README.md
installer/tauri/src-tauri/: Cargo.toml  tauri.conf.json
installer/tauri/src-tauri/icons/: icon.icns
installer/tauri/src-tauri/src/: main.rs
public/: generate-pitch.html  reveal-host.html
scripts/: build-icons.mjs  dev.ps1  dev.sh  docs-audit.mjs  generate-investor-pitch.mjs  patch-next.js
server-handlers/: claude-handler-mock.mjs  claude-handler.mjs  files-handler.mjs  terminal-handler.mjs
src/: middleware.ts
(+305 files in other folders)
