[package]
name = "claudegui"
version = "0.3.0"
description = "ClaudeGUI — web-based IDE wrapping the Claude CLI"
authors = ["ClaudeGUI Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "claudegui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"], default-features = false }
log = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
